--- a/TestFN2/Properties/Resources.resx
+++ b/TestFN2/Properties/Resources.resx
@@ -121,10 +121,34 @@
   <data name="directionals" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\directionals.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="eatdood" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\eatdood.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="game" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\game.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="game_start_6104" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\game-start-6104.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="menuoption" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\menuoption.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="menusound" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\menusound.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="newfood" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\newfood.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="snake1_inPixio (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\snake1_inPixio (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="waiting_time" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\waiting-time.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="youdied" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\download.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="youdied1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\youdied.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
